--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -28,4 +28,13 @@
 		<attr name="handleIconCollapsed" format="string" />
 	</declare-styleable>
 
+	<declare-styleable name="AspectRatioImageView">
+		<attr name="aspectRatio" format="float" />
+		<attr name="aspectRatioEnabled" format="boolean" />
+		<attr name="dominantMeasurement">
+			<enum name="width" value="0"/>
+			<enum name="height" value="1"/>
+		</attr>
+	</declare-styleable>
+
 </resources>
