Updated movie wide item text views.

--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				xmlns:app="http://schemas.android.com/apk/res-auto"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent">
 
-	<TextView
+	<com.devspark.robototextview.widget.RobotoTextView
 		android:id="@id/android:empty"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -13,7 +14,7 @@
 		android:text="@string/empty_movies"
 		android:textSize="14sp"
 		android:textColor="@color/light_secondry_text"
-		android:fontFamily="sans-serif-light" />
+		app:typeface="roboto_light" />
 
 	<GridView
 		android:id="@android:id/list"
