--- a/app/src/main/res/layout/activity_host_choose.xml
+++ b/app/src/main/res/layout/activity_host_choose.xml
@@ -5,7 +5,7 @@
 		android:layout_height="wrap_content"
 		android:background="@color/light_bg">
 
-	<TextView
+	<com.devspark.robototextview.widget.RobotoTextView
 			style="@style/Paragraph"
 			android:id="@+id/p1"
 			android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
 			android:layout_height="48dp"
 			android:orientation="horizontal">
 
-		<Button
+		<com.devspark.robototextview.widget.RobotoButton
 				android:id="@+id/cancel"
 				style="@style/ButtonBarButton"
 				android:layout_width="0dp"
@@ -53,7 +53,7 @@
 				android:layout_height="match_parent"
 				android:background="@color/light_tertiary_text"/>
 
-		<Button
+		<com.devspark.robototextview.widget.RobotoButton
 				android:id="@+id/ok"
 				style="@style/ButtonBarButton"
 				android:layout_width="0dp"
